--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
 
     <div data-role="page" id="add-page">
         <div data-role="header" data-position="fixed" data-theme="c">
-            <h1>Add TODO</h1>
+            <h1>Add ToDo</h1>
             <a href="#list-page" data-icon="back" class="ui-btn-left">back</a>
         </div>
         <div data-role="content">
